--- a/main/main.html
+++ b/main/main.html
@@ -69,8 +69,7 @@
           <!--<canvas id="byHour" width="200" height="50" click="onClick"></canvas>-->
         </div>
 
-        <div ng-if="!loading" ui-grid="{ data: callsByHour }" class="myGrid"></div>
-        <!--<table class="table table-striped">
+        <table class="table table-striped">
           <thead>
             <th>
               Hour
@@ -95,7 +94,7 @@
               </td>
             </tr>
           </tbody>
-        </table>-->
+        </table>
       </div>
     </div>
   </div>
